php-kube-app/k8s/php-adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-adminer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-adminer
  template:
    metadata:
      name: app-adminer
      labels:
        app: app-adminer
    spec:
      containers:
        - name: app-adminer
          image: adminer:latest

---

apiVersion: v1
kind: Service
metadata:
  name: app-adminer-srv
spec:
  type: NodePort
  selector:
    app: app-adminer
  ports:
    - port: 8080
      nodePort: 30008
