php-kube-app/k8s/php-app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-php
  template:
    metadata:
      name: app1-php
      labels:
        app: app1-php
    spec:
      containers:
        - name: app1-php
          imagePullPolicy: IfNotPresent
          image: php-app1

---

apiVersion: v1
kind: Service
metadata:
  name: app1-php-srv
spec:
  type: ClusterIP
  selector:
    app: app1-php
  ports:
    - port: 80
      targetPort: 80
